Bug fix
Fixed flex bug on IE (datepicker not showing dates).

--- a/duDatepicker.css
+++ b/duDatepicker.css
@@ -33,6 +33,8 @@
 	opacity: 1;
 	overflow: hidden;
 	user-select: none;
+	-ms-user-select: none;
+	-moz-user-select: none;
 	border-radius: 2px;
 	transform: translateX(-50%) scale(1);
     box-shadow: 0px 11px 15px -7px rgba(0, 0, 0, 0.2), 0px 24px 38px 3px rgba(0, 0, 0, 0.14), 0px 9px 46px 8px rgba(0, 0, 0, 0.12);
@@ -61,7 +63,7 @@
 	width: 284px;
 	user-select: none;
 	overflow: hidden;
-	flex: 1;
+	flex: 0 1 auto;
 }
 
 	.dudp__cal-container .dudp__btn-cal-prev,
@@ -132,7 +134,7 @@
 }
 .dudp__calendar .dudp__weekdays span {
 	display: inline-block;
-	flex: 1;
+	flex: 0 1 auto;
 	width: 32px;
 	text-align: center;
 	color: rgb(50,50,50);
@@ -145,7 +147,7 @@
 	flex-direction: row;
 }
 	.dudp__calendar .dudp__cal-week .dudp__date {
-		flex: 1;
+		flex: 0 1 auto;
 		display: block;
 		text-decoration: none;
 		text-align: center;
@@ -196,9 +198,10 @@
 	flex-direction: row;
 }
 .dudp__months-view .dudp__month {
-	flex: 1;
+	flex: 0 1 auto;
 	display: inline-block;
 	line-height: 68px;
+	min-width: 63px;
 	text-align: center;
 	font-size: 14px;
 	cursor: pointer;
